Added controlers and endpoints for categories

--- a/zad2/app/views/index.scala.html
+++ b/zad2/app/views/index.scala.html
@@ -2,9 +2,9 @@
 
 @main(title) {
   <h1>@title</h1>
-  <ul>
+  <ol start="0">
   @for(product <- productsList) {
     <li>@product.name - @product.price PLN</li>
   }
-  </ul>
+  </ol>
 }
