--- a/zad8/client/src/index.css
+++ b/zad8/client/src/index.css
@@ -1,13 +1,30 @@
-body {
+body, textarea {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.author {
+  margin-bottom: 10px;
+  width: 90%;
+}
+
+.model {
+  margin-bottom: 10px;
+  background-color: #e6e6e6;
+  width: 90%;
+}
+
+textarea {
+  width: 90%;
+
 }
